--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1"
