--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.1",
     "axios": "^0.26.1",
@@ -24,8 +25,8 @@
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
     "react-native-paper": "^4.11.2",
-    "react-native-safe-area-context": "^4.2.2",
-    "react-native-screens": "^3.13.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
