--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.1",
     "axios": "^0.26.1",
@@ -19,6 +19,7 @@
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "express": "^4.17.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
